<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/name_spinner"
        app:layout_constraintTop_toTopOf="parent"

        >
        <requestFocus/>
    </EditText>

    <Spinner
        android:id="@+id/name_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/name_input"
        app:layout_constraintLeft_toRightOf="@+id/name_input"
        android:prompt="@string/user_prompt"
        />

    <EditText
        android:id="@+id/money_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_money"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/remark_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_remark"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/money_input"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>